--- a/public/views/article/list.ejs
+++ b/public/views/article/list.ejs
@@ -2,7 +2,7 @@
 <h1>Article List</h1>
 <% console.log(articles) %>
   <% for(var i=0; i<articles.length; i++) { %>
-    <h1> <%= articles[i].title %> </h1>
+    <h1> <%= articles[i].title %>  <%= articles[i].created %> </h1>
     <p>
       <%= articles[i].user%>
     </p>
