--- a/public/views/product/create.ejs
+++ b/public/views/product/create.ejs
@@ -1,19 +1,101 @@
-<!DOCTYPE html5>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <title>Hello!</title>
-    <!-- General META -->
-    <meta charset="utf-8">
-    <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  </head>
-  <body>
-    <h2>New product</h2>
+<!DOCTYPE html>
+<html>
+<head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <style>
+        input:valid{
+            border: 1px solid green;
+        }
+        input:invalid{
+            border: 1px solid red;
+        }
+    </style>
+</head>
+
+<body>
+
+  <div class = "container">
+  <h1>Create New Product</h1>
+  <br>
+
+  <form id="createProductForm" class = "form-horizontal" onsubmit="return false;">
+      
+      <div class ="form-group">
+      
+      <label for ="name" class ="col-sm-2 control-label">Name</label>
+      <div class="col-sm-8">
+      <input type="text" class ="form-control" id ="name" placeholder="John Doe" required>
+      </div>
+      
+    </div>
+  <div class ="form-group">
+      
+      <label for ="description" class ="col-sm-2 control-label" >Description</label>
+      <div class="col-sm-8">
+      <textarea  class ="form-control" rows="3" id ="description"></textarea>
+      </div>
+      
+    </div>
+    
+  <div class ="form-group">
+      
+      <label for ="price" class ="col-sm-2 control-label" required>Price</label>
+      <div class="col-sm-8">
+      <input type="number" class ="form-control" id ="price" >
+      </div>
+      
+    </div>
+    <div class ="form-group">
+      
+      <label for ="quantity" class ="col-sm-2 control-label" required>Quantity</label>
+      <div class="col-sm-8">
+      <input type="number" class ="form-control" id ="quantity" >
+      </div>
+      
+    </div>
+    
+    <div class="form-group">
+        <div class = "col-sm-offset-2 col-sm-10">
+            <button id="submit" type="submit" class="btn btn-primary">Submit</button>
+        </div>
+    </div>
+   </form>
    
-  </body>
-  <script src="lib/jquery/dist/jquery.min.js"></script>
- 
+    <p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php".</p>
+    
+    <script src="/lib/jquery/dist/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.16.0/jquery.validate.min.js "></script>
+    <script>
+        var product = {
+            name: "",
+            description: "",
+            price: null,
+            quantity: null
+        };
+        
+        $("#submit").click(function(event){
+            if($("#createProductForm").valid()){
+                console.log("valid");
+                
+                product.name = $("#name").val();
+                product.description = $("#description").val();
+                product.price = $("#price").val();
+                product.quantity = $("#quantity").val();
+                console.log(product);
+                 $.ajax({
+                 url:"api/products",
+                 method:"post",
+                  data: product
+                 }).donr(function(response){
+                   console.log(response);
+                 }).fail(function(response){
+                    console.log(response.responseText);
+                    $("error").text(JSON)
+                 });
+            }else{
+                console.log("invalid input");
+            }
+        });
+    </script>
+</body>
 </html>
